refactor: 개선 사항 반영 - 사용자 정의 예외 이름 수정 - BiFunction → BiPredicate 변경 - 로또 번호가 오름차순으로 출력될 수 있도록 수정 - WinningNumbers에 부 생성자 추가하여 인스턴스 쉽게 만들도록 수정 - DisplayName에서 예외 클래스 이름 수정